--- a/src/css/features/bigger-emojis.css
+++ b/src/css/features/bigger-emojis.css
@@ -2,7 +2,7 @@
   p > .emoji {
     width: 1.3em !important;
     height: 1.3em !important;
-    padding: .2em .05em 0 .1em !important;
+    padding: 0.2em 0.05em 0 0.1em !important;
     vertical-align: text-bottom !important;
   }
 }
