--- a/src/css/options/save-bar.css
+++ b/src/css/options/save-bar.css
@@ -29,14 +29,13 @@
 
 .save-button {
   outline: none;
-  border: none;
   font-size: 14px;
   border-radius: 4px;
   border: 1px solid #3ea1fb;
   background: linear-gradient(#4ec9fb, #3ea0fb);
   color: white;
   font-weight: 500;
-  padding: 5px 13px 6px 13px;
+  padding: 5px 13px 6px;
   cursor: pointer;
   -webkit-font-smoothing: antialiased;
 
@@ -45,7 +44,7 @@
     -webkit-font-smoothing: auto;
     background: transparent;
     border: none;
-    color: color(grey a(50%))
+    color: color(grey a(50%));
   }
 }
 
@@ -55,18 +54,17 @@
   background-image: linear-gradient(#67b0fa, #3584fe);
 }
 
-
 .topbar-logo {
   font-size: 14px;
   width: var(--sidebar-width);
   padding-left: 10px;
-  border-right: 1px solid color(black a(20%))
+  border-right: 1px solid color(black a(20%));
 }
 
 .topbar-icon {
   width: 32px;
   vertical-align: middle;
-  margin-right: .5em;
+  margin-right: 0.5em;
   display: inline-block;
 }
 
@@ -76,7 +74,7 @@
 }
 
 .topbar-version-number {
-  color: color(black a(40%))
+  color: color(black a(40%));
 }
 
 .topbar-title {
