--- a/src/css/options/tokens.css
+++ b/src/css/options/tokens.css
@@ -5,8 +5,8 @@ span.token {
   font-size: 90%;
   text-transform: uppercase;
   text-shadow: 0 1px 1px color(black a(0.6));
-  box-shadow: inset 0 -2px 0 rgba(0,0,0,0.2);
-  background-image: linear-gradient(transparent, color(black a(.2)));
+  box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 0.2);
+  background-image: linear-gradient(transparent, color(black a(0.2)));
 }
 
 span.token.-meta {
