--- a/src/css/theme-dark.css
+++ b/src/css/theme-dark.css
@@ -39,7 +39,7 @@
 
   .dropdown-menu .drp-h-divider,
   .typeahead.lst li {
-    border-bottom: 1px solid hsla(210,6%,18%,1);
+    border-bottom: 1px solid hsla(210, 6%, 18%, 1);
   }
 
   .dropdown-menu .is-selected,
@@ -61,7 +61,7 @@
   .tweet-action:not(:hover):not(:focus),
   .tweet-detail-action,
   .dm-action {
-    color: color(#8899a6 saturation(0%))
+    color: color(#8899a6 saturation(0%));
   }
 
   .js-reply-info-container .txt-mute {
@@ -75,7 +75,7 @@
   }
 
   .scroll-conversation {
-    background: color(#292F33 saturation(0%));
+    background: color(#292f33 saturation(0%));
   }
 
   .account-bio {
@@ -86,8 +86,9 @@
     background-color: var(--compose-btn-bg-dark-hover);
   }
 
-  .drawer .compose, .inline-reply {
-    background-color: var(--compose-btn-bg-dark-hover)
+  .drawer .compose,
+  .inline-reply {
+    background-color: var(--compose-btn-bg-dark-hover);
   }
 
   .reply-triangle {
@@ -95,14 +96,14 @@
   }
 
   .media-caret {
-    border-color: #222426 transparent transparent transparent;
+    border-color: #222426 transparent transparent;
   }
 
   .with-column-divider-bottom {
-    border-bottom-color: color(#292F33 saturation(0%));
+    border-bottom-color: color(#292f33 saturation(0%));
   }
 
   .column-message {
-    background-color: color(#2E2E2E saturation(0%));
+    background-color: color(#2e2e2e saturation(0%));
   }
 }
