--- a/src/css/minimal.css
+++ b/src/css/minimal.css
@@ -6,6 +6,7 @@
   padding-bottom: 0 !important;
   padding-left: 0 !important;
 }
+
 .btd__minimal_mode .column {
   margin-right: 2px !important;
 }
@@ -20,9 +21,8 @@
 
 .btd__minimal_mode .app-header,
 .btd__minimal_mode .column-nav-item {
-  background-color: color(#292F33 saturation(0%));
+  background-color: color(#292f33 saturation(0%));
 }
-
 
 .btd__minimal_mode .dropdown-menu .is-selected {
   background-color: color(#55acee saturation(0%));
@@ -34,6 +34,7 @@
 .btd__minimal_mode :matches(.stream-item, .tweet-detail-reply .stream-item, .compose-header) {
   border-bottom: 0;
 }
+
 .btd__minimal_mode .in-tweet-divider::before {
   background: rgba(0, 0, 0, 0.13);
 }
