--- a/src/css/options/index.css
+++ b/src/css/options/index.css
@@ -1,6 +1,5 @@
 @import "normalize.css";
 @import "../../../node_modules/prismjs/themes/prism-solarizedlight.css";
-
 @import "./save-bar.css";
 @import "./sidebar.css";
 @import "./tokens.css";
@@ -46,7 +45,6 @@ body.-browser-firefox [data-hidden-firefox] {
   flex: 1;
   background: white;
   position: relative;
-
   color: #383838;
 }
 
@@ -59,7 +57,6 @@ body.-browser-firefox [data-hidden-firefox] {
   background: white;
   overflow: auto;
   padding: 20px;
-
   visibility: hidden;
   transition: opacity 300ms ease;
   transform: translate(-100%, -100%);
@@ -72,7 +69,6 @@ body.-browser-firefox [data-hidden-firefox] {
   opacity: 1;
 }
 
-
 /*
   Content's style
  */
@@ -80,7 +76,7 @@ body.-browser-firefox [data-hidden-firefox] {
   margin: 0;
   font-weight: 400;
   padding-bottom: 5px;
-  border-bottom: 1px solid #eeeeee;
+  border-bottom: 1px solid #eee;
 }
 
 .settings-section {
@@ -103,7 +99,8 @@ body.-browser-firefox [data-hidden-firefox] {
     color: color(var(--link-color) shade(20%));
   }
 
-  a:hover, a:active {
+  a:hover,
+  a:active {
     color: color(var(--link-color) shade(50%));
   }
 
@@ -116,21 +113,23 @@ body.-browser-firefox [data-hidden-firefox] {
     list-style: none;
   }
 
-  ul, ol {
-    padding-left: .7em;
+  ul,
+  ol {
+    padding-left: 0.7em;
     font-size: 14px;
 
-    ul, ol {
+    ul,
+    ol {
       padding-left: 1.4em;
     }
 
     li {
       line-height: 1.8;
-      margin: .6em 0;
+      margin: 0.6em 0;
     }
 
     input + label {
-      margin-left: .5em;
+      margin-left: 0.5em;
     }
 
     img.favicon-icon {
@@ -138,7 +137,7 @@ body.-browser-firefox [data-hidden-firefox] {
     }
 
     label.left-label {
-      margin-right: .4em;
+      margin-right: 0.4em;
       min-width: 50px;
       text-align: right;
       display: inline-block;
@@ -148,7 +147,7 @@ body.-browser-firefox [data-hidden-firefox] {
       position: relative;
     }
 
-    label[data-new-feat]:after {
+    label[data-new-feat]::after {
       content: 'New';
       text-transform: uppercase;
       display: inline-block;
@@ -160,12 +159,12 @@ body.-browser-firefox [data-hidden-firefox] {
       border-radius: 4px;
       color: white;
       top: 50%;
-      transform: translate(0%,-50%);
+      transform: translate(0%, -50%);
     }
 
     label small,
     li small {
-      margin-left: .4em;
+      margin-left: 0.4em;
       color: #a0a0a0;
       font-size: 80%;
       font-style: normal;
@@ -178,7 +177,8 @@ body.-browser-firefox [data-hidden-firefox] {
         color: color(var(--link-color) saturation(0) shade(20%));
       }
 
-      a:hover, a:active {
+      a:hover,
+      a:active {
         color: color(var(--link-color) saturation(0) shade(50%));
       }
     }
@@ -186,85 +186,78 @@ body.-browser-firefox [data-hidden-firefox] {
 }
 
 span.emoji {
-	display: -moz-inline-box;
-	-moz-box-orient: vertical;
-	display: inline-block;
-	vertical-align: baseline;
-	*vertical-align: auto;
-	*zoom: 1;
-	*display: inline;
-	width: 1em;
-	height: 1em;
-	background-size: 1em;
-	background-repeat: no-repeat;
-	text-indent: -9999px;
-	background-position: 50%, 50%;
-	background-size: contain;
+  display: inline-block;
+  vertical-align: baseline;
+  width: 1em;
+  height: 1em;
+  background-repeat: no-repeat;
+  text-indent: -9999px;
+  background-position: 50%, 50%;
+  background-size: contain;
 }
 
 span.emoji-sizer {
-	line-height: 0.81em;
-	font-size: 1em;
- 	margin: -2px 0;
+  line-height: 0.81em;
+  font-size: 1em;
+  margin: -2px 0;
 }
 
 span.emoji-outer {
-	display: -moz-inline-box;
-	display: inline-block;
-	*display: inline;
-	height: 1em;
-	width: 1em;
+  display: -moz-inline-box;
+  display: inline-block;
+  *display: inline;
+  height: 1em;
+  width: 1em;
 }
 
 span.emoji-inner {
-	display: -moz-inline-box;
-	display: inline-block;
-	text-indent: -9999px;
-	width: 100%;
-	height: 100%;
-	vertical-align: baseline;
-	*vertical-align: auto;
-	*zoom: 1;
+  display: -moz-inline-box;
+  display: inline-block;
+  text-indent: -9999px;
+  width: 100%;
+  height: 100%;
+  vertical-align: baseline;
+  *vertical-align: auto;
+  *zoom: 1;
 }
 
 img.emoji {
-	width: 1em;
-	height: 1em;
+  width: 1em;
+  height: 1em;
 }
 
 button.plain-button {
   outline: none;
   border: none;
-
   font-size: 14px;
   border-radius: 4px;
-  color: #3B3B3B;
+  color: #3b3b3b;
   font-weight: 500;
-  padding: 5px 13px 6px 13px;
-  border: 1px solid #b1b1b1;
+  padding: 5px 13px 6px;
   cursor: pointer;
   -webkit-font-smoothing: antialiased;
-  
+
   &:hover {
-    background: linear-gradient(#ffffff, #f1f1f1);
+    background: linear-gradient(#fff, #f1f1f1);
     border: 1px solid #b1b1b1;
   }
-  
-  &, &[disabled]:hover {
+
+  &,
+  &[disabled]:hover {
     border: 1px solid #cecece;
-    background: linear-gradient(#ffffff, #e8e8e8);
+    background: linear-gradient(#fff, #e8e8e8);
   }
-  
+
   &[disabled] {
     pointer-events: none;
     background-color: transparent;
-    opacity: .8;
+    opacity: 0.8;
   }
 }
 
 @keyframes flashSetting {
-	from { background-color: rgba(255, 255, 0, 0.7); }
-	to { background-color: rgba(255, 255, 0, 0); }
+  from { background-color: rgba(255, 255, 0, 0.7); }
+  to { background-color: rgba(255, 255, 0, 0); }
 }
 
 .flash-setting {
@@ -274,7 +267,7 @@ button.plain-button {
 .settings-section.changelog [data-info-setting] {
   position: relative;
   cursor: pointer;
-  
+
   &::before {
     content: '\2197';
     position: absolute;
@@ -284,21 +277,19 @@ button.plain-button {
     top: 56%;
     left: 0;
     transform: translate(-100%, -50%);
-
     text-align: center;
     color: black;
-    opacity: .4;
-    
+    opacity: 0.4;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
-  
+
   &:hover::before {
     color: #1586ce;
     text-decoration: underline;
-    opacity: 1;    
+    opacity: 1;
   }
 }
 
