Added hiding columns from the column header. (#208)
* :cookie: Added hiding columns from the column header.

Hide a column by clicking on `-` a lot.
Restore a column by clicking on it in the left column navigator.

notes:

 * keyboard navigation `1-9` seems to work weirdly.
  * if you minimize a column in the front, pressing `1` will take you
    to the _new_ first available column
  * if you minimize a column in the 4th position then it will
    absorb keypresses as if it is still there
 * the column heads show numbers, these are from CSS, therefore hiding
   a column makes the styles skip numbers making it appear as if they
   do not exist anywhere but the left navigation
 * lots of styles could probably be shaved out but i'm bad at everything

not tested columns:

 * any 'temporary' column (whatever those are)
 * columns with long titles and/or usernames
 * searches / trending / editable column titles

tested columns:

 * home
 * collections
 * notifications
 * messages / all messages
 * likes
 * mentions / all mentions
 * followers
 * activity
 * scheduled (seems good?)

* :pencil: Collapse columns instead of disappearing them.

* :pencil: Collapsed columns toggle and persist.

* :pencil: Extend TD.vo.Column's constructor to namespace our extensions.

* Renamed things to match collapsing columns, css file, now optional

* Changed the timing of settingsReady and honored the option.

* Un-inverted settings checks, click listeners use body now.

* Switched to mousedown, removed debug prints.

* Flexing on the haters.

* Added messages that I swear were already here.

* Fixed issue w/ TD.vo.Column patch breaking searches.

* Expanding a column will now showColumn so you can see it.

* Forgot to set default option. It's here now!

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -12,6 +12,7 @@
 @import './features/hide-context.css';
 @import './features/hide-scrollbars.css';
 @import './features/hide-url-thumb.css';
+@import './features/collapse-columns.css';
 @import './features/no-col-icns.css';
 @import './features/no-bg-modal.css';
 @import './features/no-play-btn.css';
