--- a/src/css/options/save-bar.css
+++ b/src/css/options/save-bar.css
@@ -59,22 +59,31 @@
   width: var(--sidebar-width);
   padding-left: 10px;
   border-right: 1px solid color(black a(20%));
+  display: flex;
+  align-items: center;
+  overflow: hidden;
 }
 
 .topbar-icon {
   width: 32px;
+  height: 32px;
   vertical-align: middle;
   margin-right: 0.5em;
   display: inline-block;
 }
 
 .topbar-name {
-  display: inline-block;
+  display: inline-flex;
+  flex-direction: column;
+  overflow: hidden;
   vertical-align: middle;
 }
 
 .topbar-version-number {
   color: color(black a(40%));
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .topbar-title {
