--- a/src/css/features/collapse-columns.css
+++ b/src/css/features/collapse-columns.css
@@ -77,6 +77,10 @@ section.btd-column-collapsed {
   display: none;
 }
 
+section.js-column.column.column-type-search .btd-column-buttons {
+  width: 100%;
+}
+
 ul.btd-column-buttons {
   /* move .column-header-link styles to here */
   width: auto;
