--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,6 +6,7 @@
 /* Visual Features */
 @import './features/actions.css';
 @import './features/bigger-emojis.css';
+@import './features/character-count.css';
 @import './features/collapse-dms.css';
 @import './features/flash-tweets.css';
 @import './features/gray-notif-icns.css';
