--- a/src/css/features/gray-notif-icns.css
+++ b/src/css/features/gray-notif-icns.css
@@ -1,4 +1,6 @@
-.btd__gray_icns_notifs .activity-header .activity-indicator.icon,
-.btd__gray_icns_notifs .tweet-context .icon-retweet {
-  color: #999;
+html.btd-on {
+  .btd__gray_icns_notifs .activity-header .activity-indicator.icon,
+  .btd__gray_icns_notifs .tweet-context .icon-retweet {
+    color: #999;
+  }
 }
