--- a/src/css/features/hide-context.css
+++ b/src/css/features/hide-context.css
@@ -1,3 +1,5 @@
-.btd__hide_context .js-stream-item:not(.btd-is-retweet) .tweet-context {
-  display: none;
+html.btd-on {
+  .btd__hide_context .js-stream-item:not(.btd-is-retweet) .tweet-context {
+    display: none;
+  }
 }
