--- a/src/css/features/hide-scrollbars.css
+++ b/src/css/features/hide-scrollbars.css
@@ -1,24 +1,23 @@
-.btd__no_scrollbars {
-  .js-column-scroller {
-    overflow-y: hidden;
+html.btd-on {
+  .btd__no_scrollbars {
+    .js-column-scroller {
+      overflow-y: hidden;
+    }
+    .js-detail-container {
+      overflow-y: hidden;
+    }
   }
 
-  .js-detail-container {
-    overflow-y: hidden;
-  }
-}
-
-.btd__minimal_mode.btd__no_scrollbars {
-  .scroll-styled-v::-webkit-scrollbar-track,
-  .scroll-styled-h::-webkit-scrollbar-track {
-    border-left: 0;
-  }
-
-  .scroll-styled-h::-webkit-scrollbar {
-    height: 0;
-  }
-
-  .needs-scroll-bottom-offset.scroll-styled-h {
-    bottom: 0;
+  .btd__minimal_mode.btd__no_scrollbars {
+    .scroll-styled-v::-webkit-scrollbar-track,
+    .scroll-styled-h::-webkit-scrollbar-track {
+      border-left: 0;
+    }
+    .scroll-styled-h::-webkit-scrollbar {
+      height: 0;
+    }
+    .needs-scroll-bottom-offset.scroll-styled-h {
+      bottom: 0;
+    }
   }
 }
