--- a/src/css/features/username-typeahead.css
+++ b/src/css/features/username-typeahead.css
@@ -1,5 +1,7 @@
-.btd__usrname_only_typeahead .typeahead-item {
-  .fullname {
-    display: none;
+html.btd-on {
+  .btd__usrname_only_typeahead .typeahead-item {
+    .fullname {
+      display: none;
+    }
   }
 }
