--- a/src/css/features/character-count.css
+++ b/src/css/features/character-count.css
@@ -1,7 +1,9 @@
-.btd__character_count .js-character-count {
-  display: inline !important;
-}
+html.btd-on {
+  .btd__character_count .js-character-count {
+    display: inline !important;
+  }
 
-.btd__character_count .js-character-count ~ svg {
-  display: none !important;
+  .btd__character_count .js-character-count~svg {
+    display: none !important;
+  }
 }
