--- a/src/css/features/no-col-icns.css
+++ b/src/css/features/no-col-icns.css
@@ -1,9 +1,10 @@
-.btd__no_col_icns .js-column-header {
-  .column-type-icon {
-    display: none;
-  }
-
-  h1.column-title {
-    margin-left: 10px;
+html.btd-on {
+  .btd__no_col_icns .js-column-header {
+    .column-type-icon {
+      display: none;
+    }
+    h1.column-title {
+      margin-left: 10px;
+    }
   }
 }
