--- a/src/css/features/show-provider-name.css
+++ b/src/css/features/show-provider-name.css
@@ -1,19 +1,21 @@
-.btd__show_provider_indicator .js-media-preview-container[data-btd-provider] {
-  position: relative;
-}
+html.btd-on {
+  .btd__show_provider_indicator .js-media-preview-container[data-btd-provider] {
+    position: relative;
+  }
 
-.btd__show_provider_indicator .js-media-preview-container[data-btd-provider]::after {
-  content: attr(data-btd-provider);
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-  border-radius: 2px;
-  font-size: 9px;
-  color: white;
-  font-weight: bold;
-  padding: 3px 4px 2px;
-  background-color: color(black a(40%));
-  line-height: normal;
-  text-transform: uppercase;
-  z-index: 9;
+  .btd__show_provider_indicator .js-media-preview-container[data-btd-provider]::after {
+    content: attr(data-btd-provider);
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    border-radius: 2px;
+    font-size: 9px;
+    color: white;
+    font-weight: bold;
+    padding: 3px 4px 2px;
+    background-color: color(black a(40%));
+    line-height: normal;
+    text-transform: uppercase;
+    z-index: 9;
+  }
 }
