--- a/src/css/features/system-fonts.css
+++ b/src/css/features/system-fonts.css
@@ -1,7 +1,9 @@
-.btd__system_fonts {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-
-  .is-inverted-dark {
-    font-family: inherit;
+html.btd-on {
+  .btd__system_fonts {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    
+    .is-inverted-dark {
+      font-family: inherit;
+    }
   }
 }
