--- a/src/css/features/small-icns.css
+++ b/src/css/features/small-icns.css
@@ -1,16 +1,16 @@
 html.btd-on {
-  .btd__slim_scrollbars {
-    .js-column-scroller.scroll-styled-v::-webkit-scrollbar,
-    .js-dropdown-container.scroll-styled-v::-webkit-scrollbar {
-      width: 3px;
-    }
-
-    .js-app-columns-container.scroll-styled-h::-webkit-scrollbar {
-      height: 3px;
-    }
-
-    .js-app-columns-container.needs-scroll-bottom-offset.scroll-styled-h {
-      bottom: 0;
+  .btd__small_icns_compose {
+    .js-add-image-button,
+    .js-schedule-button,
+    .js-add-emojis,
+    .js-tweet-type-button>button {
+      width: auto !important;
+      float: left !important;
+      margin-right: 4px;
+      
+      .label {
+        display: none;
+      }
     }
   }
 }
