--- a/src/css/index.css
+++ b/src/css/index.css
@@ -227,4 +227,9 @@ html.btd-on {
   .js-modal.open-modal div.js-right-column.scroll-v {
     overflow-x: hidden;
   }
+
+  .icon::before {
+    -moz-osx-font-smoothing: grayscale;
+  }
+
 }
