--- a/src/css/index.css
+++ b/src/css/index.css
@@ -29,8 +29,10 @@
 @import './features/hide-like-rt-indicators.css';
 
 /* Emoji Panel */
-
 @import './emoji-panel.css';
+
+/* G I P H Y */
+@import './giphy.css';
 
 /* Embed/modals */
 
@@ -230,5 +232,10 @@ html.btd-on {
 
   .icon::before {
     -moz-osx-font-smoothing: grayscale;
+  }
+
+  .compose .compose-header .icon-close {
+    margin-top: 14px !important;
+    margin-bottom: 0 !important;
   }
 }
