:bulb: emoji hover preview

--- a/src/css/emoji-panel.css
+++ b/src/css/emoji-panel.css
@@ -6,10 +6,16 @@ html.btd-on {
     flex-direction: column;
   }
 
+  .emoji-popover {
+    overflow: hidden;
+  }
+
+
   .emoji-popover .emoji-container {
     flex: 1;
     overflow-y: scroll;
     overflow-x: hidden;
+    padding-bottom: 40px;
 
     &::-webkit-scrollbar {
       width: 2px;
@@ -24,11 +30,56 @@ html.btd-on {
     }
   }
 
+  .emoji-popover .emoji-preview {
+    position: absolute;
+    box-sizing: border-box;
+    bottom: 30px;
+    width: 100%;
+    z-index: 0;
+    padding: 6px 5px;
+    background: #f9f9f9;
+    color: #28292b;
+    border-top: 1px solid #e4e4e4;
+    border-bottom: 1px solid #e4e4e4;
+    display: flex;
+    align-items: center;
+    transition: transform 300ms ease;
+    transform: translateY(100%);
+  }
+
+  .emoji-popover .emoji-preview.-visible {
+    transform: translateY(0);
+  }
+
+
+  .emoji-popover .emoji-preview .emoji-current-img {
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .emoji-popover .emoji-preview .emoji-current-img .btd-emoji {
+    font-size: inherit;
+  }
+
+  .emoji-popover .emoji-preview .emoji-current-name {
+    padding-left: 6px;
+    flex: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: 12px;
+  }
+
   .emoji-popover .category-chooser {
     height: 30px;
     display: flex;
     flex-direction: row;
+    background: white;
+    z-index: 1;
     position: relative;
+    border-radius: 0 0 8px 8px;
   }
 
   .emoji-popover .emoji-search {
@@ -37,16 +88,6 @@ html.btd-on {
 
   .emoji-popover .emoji-search {
     color: #28292b;
-  }
-
-  .emoji-popover .category-chooser::before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 5px;
-    background: linear-gradient(transparent, white);
-    box-shadow: 0 1px 0 color(black a(10%));
-    top: -5px;
   }
 
   .emoji-popover .category-chooser > button {
