:bug: fix position of The Giphy Zone when accounts panel is expanded

--- a/src/css/giphy.css
+++ b/src/css/giphy.css
@@ -2,8 +2,8 @@
   box-sizing: border-box;
   position: absolute;
   top: 0;
-  z-index: 210;
-  left: 50px;
+  z-index: 19;
+  left: 200px;
   color: white;
   width: 270px;
   height: 100%;
@@ -15,6 +15,10 @@
   transition-timing-function: ease;
   display: flex;
   flex-direction: column;
+}
+
+.application.is-condensed .btd-giphy-zone {
+  left: 50px;
 }
 
 .btd-giphy-zone.-visible {
