:art: fix small CSS bug with small icns in composer

--- a/src/css/features/small-icns.css
+++ b/src/css/features/small-icns.css
@@ -7,10 +7,18 @@ html.btd-on {
       width: auto !important;
       float: left !important;
       margin-right: 4px;
-      
+
       .label {
         display: none;
       }
+    }
+  }
+
+  .js-schedule-datapicker-holder > .popover {
+    margin-top: 51px;
+
+    .caret {
+      left: calc(50% - 5px);
     }
   }
 }
