--- a/src/css/options/index.css
+++ b/src/css/options/index.css
@@ -303,3 +303,7 @@ kbd {
   border-radius: 3px;
   box-shadow: inset 0 -1px 0 #959da5;
 }
+
+.js-media-gif-container {
+  background-image: none;
+}
